2008-07-31  Sam Steingold  <sds@gnu.org>

	* foreign1.lisp (def-c-enum): accept non-numeric-literal values

2008-07-31  Sam Steingold  <sds@gnu.org>

	* modules/gtk2/configure.in: fail if FFI is not present

2008-07-31  Sam Steingold  <sds@gnu.org>

	* modules/dbus: new module
	* Makefile.devel (MODULES): add dbus

2008-07-29  Sam Steingold  <sds@gnu.org>

	* init.lisp (search-file): fix a bug in "wild" code which caused
	SEARCH-FILE to return NIL even when it found something

2008-07-28 Reini Urban  <rurban@x-ray.at>

	<37_runprog>
	* runprog.lisp: Translate comments to English.

2008-07-28  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (builtin_stream_p): do not export
	* modules/syscalls/calls.c (PATHCONF, FILE-STAT, STAT-VFS):
	use open_file_stream_handle instead of
	builtin_stream_p + SYS::BUILT-IN-STREAM-OPEN-P

2008-07-28  Sam Steingold  <sds@gnu.org>

	new SETFable function POSIX:FILE-SIZE
	* modules/syscalls/configure.in: check for truncate & ftruncate
	* modules/syscalls/calls.c (FILE-SIZE, %SET-FILE-SIZE): implement
	* modules/syscalls/posix.lisp (FILE-SIZE): defsetf & export
	* stream.d (check_open_file_stream): replace strict_p with
	permissive_p to allow retuning nullobj instead of signaling an error
	(open_file_stream_handle): accept permissive_p
	* lispbibl.d (open_file_stream_handle): update the prototype

2008-07-27  Sam Steingold  <sds@gnu.org>

	fix bug #[ 2029069 ]: stack overflow with gethash
	* hashtabl.d (hashcode3_atom, hashcode3stable_atom, sxhash_atom):
	accept level argument (ignore it because EQUAL hash code does not
	recurse on atoms)
	(HASHCODE_MAX_LEVEL): rename from HASHCODE_TREE_MAX_LEVEL
	(HASHCODE_NEED_LEAVES): rename from HASHCODE_TREE_NEED_LEAVES
	(hashcode_tree_rec): pass level+1 to hashcode_leaf
	(hashcode_tree): accept level argument
	(hashcode3, hashcode3stable, hashcode4, sxhash): pass level=0 to
	hashcode_tree()
	(hashcode4_): new macro: like hashcode4(), but pass level+1 to
	hashcode_tree()